fix(ActionsPanel): reserve side spacing in container

--- a/packages/components/src/components/ActionsPanel/ActionPanel.module.css
+++ b/packages/components/src/components/ActionsPanel/ActionPanel.module.css
@@ -9,13 +9,14 @@
   --actions-panel-vertical-divider-color: var(--kbq-line-contrast-fade);
 
   display: flex;
-  inline-size: 100%;
   position: absolute;
   align-items: center;
   pointer-events: none;
   justify-content: center;
+  inset-inline: var(--kbq-size-s) var(--kbq-size-s);
   inset-block-end: var(--kbq-size-l);
   z-index: var(--kbq-layer-absolute);
+  inline-size: calc(100% - 2 * var(--kbq-size-s));
 }
 
 /* animation */
